--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.7.3",
+    "@react-three/fiber": "^9.3.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -12,6 +14,7 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.179.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -19,6 +22,7 @@
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.0",
+    "three": "^0.179.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
